My lists without tab bar
Fuck tab bar

--- a/iMarket/Base.lproj/Main.storyboard
+++ b/iMarket/Base.lproj/Main.storyboard
@@ -159,7 +159,7 @@
             </objects>
             <point key="canvasLocation" x="1014" y="418"/>
         </scene>
-        <!--New List-->
+        <!--My Lists-->
         <scene sceneID="FSQ-Nr-phZ">
             <objects>
                 <viewController id="mmC-kJ-UsF" customClass="iMkt_ListsViewController" sceneMemberID="viewController">
@@ -171,19 +171,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="pzB-uM-Jvv">
-                                <rect key="frame" x="0.0" y="-38" width="600" height="600"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="P3C-GX-duC">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="New List" id="thQ-9N-wQ8"/>
-                    <navigationItem key="navigationItem" id="bu7-dT-CRs"/>
+                    <navigationItem key="navigationItem" title="My Lists" id="bu7-dT-CRs">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="56X-PR-OfT"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aos-ka-7hz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1826" y="1170"/>
+            <point key="canvasLocation" x="1014" y="1170"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="T6S-fj-Zeb">
@@ -196,31 +197,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="gGr-hO-xre" kind="relationship" relationship="rootViewController" id="sBD-XQ-CWr"/>
+                        <segue destination="mmC-kJ-UsF" kind="relationship" relationship="rootViewController" id="sBD-XQ-CWr"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="anM-7j-uqj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="281" y="1170"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="WGX-Mx-619">
-            <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="gGr-hO-xre" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="hkM-Xa-9q8"/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="xdJ-Jf-eVp">
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="mmC-kJ-UsF" kind="relationship" relationship="viewControllers" id="oGd-ke-nNC"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EB6-Xn-kWq" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1014" y="1170"/>
         </scene>
     </scenes>
 </document>
