--- a/iMarket/Base.lproj/Main.storyboard
+++ b/iMarket/Base.lproj/Main.storyboard
@@ -110,21 +110,33 @@
                                 <rect key="frame" x="180" y="228" width="241" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dlu-Fb-pi2" id="CZo-aw-F3F"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Xb-SR-AN7">
                                 <rect key="frame" x="180" y="304" width="241" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="next" secureTextEntry="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dlu-Fb-pi2" id="MDc-2E-Fi8"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n6Z-00-Y3X">
                                 <rect key="frame" x="180" y="266" width="241" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dlu-Fb-pi2" id="ri9-yK-l3n"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YiO-FV-fq8">
                                 <rect key="frame" x="180" y="342" width="241" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="done" secureTextEntry="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dlu-Fb-pi2" id="n9V-4k-x6g"/>
+                                </connections>
                             </textField>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SDj-eB-QiI">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
@@ -167,6 +179,7 @@
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <connections>
+                        <outlet property="confirmPassword" destination="YiO-FV-fq8" id="bPG-ZC-fQE"/>
                         <outlet property="email" destination="n6Z-00-Y3X" id="hFs-mr-arS"/>
                         <outlet property="password" destination="8Xb-SR-AN7" id="Yhq-Tx-DIC"/>
                         <outlet property="username" destination="ZM6-GL-1VN" id="Yh8-A7-99U"/>
