New list view: keyboard return function and keyboard disappear

--- a/iMarket/Base.lproj/Main.storyboard
+++ b/iMarket/Base.lproj/Main.storyboard
@@ -309,17 +309,23 @@
                         <viewControllerLayoutGuide type="top" id="QHu-pG-mTo"/>
                         <viewControllerLayoutGuide type="bottom" id="hby-Ne-J8c"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="snU-hi-849">
+                    <view key="view" contentMode="scaleToFill" id="snU-hi-849" customClass="UIControl">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="List name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1wN-fQ-9cU">
                                 <rect key="frame" x="172" y="193" width="257" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="2Cf-9o-P9E" id="cpo-ct-JMI"/>
+                                </connections>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <action selector="hideKeyboard:" destination="2Cf-9o-P9E" eventType="touchDown" id="QpA-Je-LWh"/>
+                        </connections>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="New List" id="7KV-ND-zEg">
